# hquery

./: LICENSE  README.md  TODO  hq.cabal  hq.hs  hquery.cabal
src/: Hquery.hs
src/Hquery/: Error.hs  Selector.hs  Transform.hs  Utils.hs
src/Text/: Hquery.hs
src/Text/Hquery/: Dsl.hs  Utils.hs
src/Text/Hquery/Internal/: Error.hs  Selector.hs  Transform.hs
tests/: AttributeTests.hs  ParserTests.hs  TransformTests.hs  UtilsTests.hs
tests/attributes/: AppendClass.html  AppendClass.html.expected  PopulateList.html
tests/markup/: AddClass.html.expected  AppendContent.html  AppendContent.html.expected  BasicComposition.html  BasicComposition.html.expected  GroupNodes.html.expected  ListOfFs.html.expected  NestXform.html  NestXform.html.expected  PeopleOccupations.html  PeopleOccupations.html.expected  PopulateList.html.expected  RemoveId.html  RemoveNode.html  RemoveStar.html.expected  SingleF.html  SingleF.html.expected  TagAppend.html  TagAppend.html.expected
tools/: hq.hs
