name:                hquery
version:             0.1.0.0
synopsis:            A query language for transforming HTML5, similar to jquery
homepage:            http://tycho.ws
license:             MIT
license-file:        LICENSE
author:              Tycho Andersen
maintainer:          tycho@tycho.ws
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  build-depends: base ==4.5.*, parsec >= 3.1, xmlhtml >= 0.2.0.3, text >= 0.11.2.3, MissingH >= 1.2.0.0
  hs-source-dirs: src
  exposed-modules: Hquery
  other-modules: Hquery.Selector
                 Hquery.Transform
  ghc-options: -Wall
  extensions: FlexibleInstances

executable hq
  hs-source-dirs: tools
  main-is: hq.hs
  build-depends: base ==4.5.*, parsec >= 3.1, hquery >= 0.1.0.0
