name:                hquery
version:             0.1.0.0
synopsis:            A query language for transforming HTML5, similar to jquery
homepage:            http://tycho.ws
license:             MIT
license-file:        LICENSE
author:              Tycho Andersen
maintainer:          tycho@tycho.ws
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  build-depends: base ==4.5.*, parsec >= 3.1, xmlhtml >= 0.2.0.3,
                 text >= 0.11.2.3, containers >= 0.4.2.1

  hs-source-dirs: src
  exposed-modules: Hquery, Hquery.Utils, Hquery.Selector
  other-modules: Hquery.Transform
  ghc-options: -Wall
  extensions: FlexibleInstances, OverloadedStrings

executable hq
  hs-source-dirs: tools
  main-is: hq.hs
  build-depends: base ==4.5.*, parsec >= 3.1, hquery >= 0.1.0.0

test-suite AttributeTests
  hs-source-dirs: tests
  main-is: AttributeTests.hs
  type: exitcode-stdio-1.0
  build-depends: base ==4.5.*, hquery >= 0.1.0.0, xmlhtml >= 0.2.0.3, HUnit, filepath >= 1.3.0.0, bytestring >= 0.9.2.1, test-framework, test-framework-hunit
  extensions: DeriveDataTypeable

test-suite ParserTests
  hs-source-dirs: tests
  main-is: ParserTests.hs
  type: exitcode-stdio-1.0
  build-depends: base ==4.5.*, hquery >= 0.1.0.0, HUnit, test-framework, test-framework-hunit, parsec >= 3.1
